fixed last mailig

--- a/mjml-gulp/mjml-gulp-starter/src/3108-second.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/3108-second.mjml
@@ -26,11 +26,11 @@
                     <p class="paragraph">
                         Последний день лета…
                     </p>
-                    <p class="paragpraph">                    Если Вам, как и многим, не удалось в этом году попасть на море - не печальтесь.
+                    <p class="paragraph">                    Если Вам, как и многим, не удалось в этом году попасть на море - не печальтесь.
                     </p>
-                    <p class="paragpraph">                    У Вас есть прекрасная возможность совершить погружение в море банкротства в компании  Андрея Егорова и Павла Семенцова.
+                    <p class="paragraph">                    У Вас есть прекрасная возможность совершить погружение в море банкротства в компании  Андрея Егорова и Павла Семенцова.
                     </p>
-                    <p class="paragpraph">                    Опасные рифы: госкомпания, публично-правовая компания, фонд и другие.
+                    <p class="paragraph">                    Опасные рифы: госкомпания, публично-правовая компания, фонд и другие.
                     </p>
                 </mj-text>
             </mj-column>
