--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
@@ -33,6 +33,8 @@
         width: 100%;
         max-width: 560px;
         box-sizing: border-box;
+        margin: 0;
+        Margin: 0;
         }
 
         .paragraph-moreinfo {
