--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/head.mjml
@@ -42,12 +42,13 @@
         }
 
         .button {
+        display: inline-block;
         background-color: #8bb420;
         font-family: "Book Antiqua,Arial";
         font-weight: bold;
         font-size: 20px;
         width: auto;
-        height: 20px;
+        height: auto;
         line-height: 120%;
         color: white;
         text-align: center;
