--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/header.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/header.mjml
@@ -37,7 +37,7 @@
                                                                       role="link"
                                                                       href="tel:+78005513206"
             >
-              <img style="vertical-align: middle; padding-right: 10px;" src="https://funkyimg.com/i/2L53S.png"
+              <img style="vertical-align: middle; padding-right: 10px;" src="https://github.com/Olovyannikov/Lextorium/blob/master/mjml-gulp/mjml-gulp-starter/src/img/phone.png?raw=true"
                    alt="tel:+78005513206">8(800)
               551-32-06</span></mj-navbar-link>
         </mj-navbar>
