--- a/mjml-gulp/mjml-gulp-starter/src/0409.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/0409.mjml
@@ -247,7 +247,7 @@
                 <mj-text padding-left="0">
                     <p class="paragraph">
                         <i style="font-family: Comfortaa, Arial, sans-serif">
-                            Хороших Вам продуктивного дня!<br>
+                            Желаем Вам продуктивного дня!<br>
                             Команда  Lextorium!                      </i>
                     </p>
                 </mj-text>
