--- a/mjml-gulp/mjml-gulp-starter/src/ae.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/ae.mjml
@@ -44,7 +44,7 @@
                         <span style="text-transform: capitalize;">{{first_name|Коллега}}</span>, здравствуйте!
                     </p>
                     <p class="paragraph">
-                    Последние годы институт субсидиарной ответственности при банкротстве все чаще при-меняется на практике и становится действенным инструментом привлечения к ответ-ственности лиц, нарушавших права кредиторов. С ростом количества споров растет и ко-личество вопросов, возникающих при применении этого института. Какие-то из них свя-заны с недостатками законодательства, какие-то упираются в трудности правопримени-тельной практики. На них реагирует как законодатель, так и судебная практика (в т.ч. Су-дебная коллегия по экономическим спорам Верховного Суда РФ).
+                    Последние годы институт субсидиарной ответственности при банкротстве все чаще при-меняется на практике и становится действенным инструментом привлечения к ответственности лиц, нарушавших права кредиторов. С ростом количества споров растет и количество вопросов, возникающих при применении этого института. Какие-то из них связаны с недостатками законодательства, какие-то упираются в трудности правоприменительной практики. На них реагирует как законодатель, так и судебная практика (в т.ч. Судебная коллегия по экономическим спорам Верховного Суда РФ).
                 </mj-text>
             </mj-column>
         </mj-section>
@@ -107,7 +107,7 @@
                             банкротстве АО «Тепло-учет»</mj-accordion-title>
                         <mj-accordion-text>
               <span style="line-height:20px">
-Одобрение членами совета директоров подозрительной сделки по внесению в уставный капитал вклада в виде дебиторской задолженности организации-банкрота, повлекшей не-возможность погашения задолженности перед кредиторами должника.              </span>
+Одобрение членами совета директоров подозрительной сделки по внесению в уставный капитал вклада в виде дебиторской задолженности организации-банкрота, повлекшей невозможность погашения задолженности перед кредиторами должника.              </span>
 
 
                         </mj-accordion-text>
@@ -124,7 +124,9 @@
                             3. Определение Верховного Суда РФ от 24.08.2020 по делу о банкротстве ООО «Ключ»                        </mj-accordion-title>
                         <mj-accordion-text>
               <span style="line-height:20px">
-Привлечение к субсидиарной ответственности фактического директора наряду с номинальным директором с переоценкой выводов судов апелляционной и кассационной ин-станций об отказе в иске. Подробное обоснование косвенных признаков, свидетельству-ющих о наличии теневого (фактического) директора.                        </mj-accordion-text>
+Привлечение к субсидиарной ответственности фактического директора наряду с номинальным директором с переоценкой выводов судов апелляционной и кассационной инстанций об отказе в иске. Подробное обоснование косвенных признаков, свидетельствующих о наличии теневого (фактического) директора.
+              </span>
+                        </mj-accordion-text>
                     </mj-accordion-element>
                     <mj-accordion-element>
                         <mj-accordion-title>
