--- a/mjml-gulp/mjml-gulp-starter/src/ae.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/ae.mjml
@@ -145,7 +145,7 @@
                             «Товары будущего»</mj-accordion-title>
                         <mj-accordion-text>
               <span style="line-height:20px">
-Коллегия дала новую оценку фактическим обстоятельствам дела, признала необоснован-ным отказ в привлечении к субсидиарной ответственности лиц, в отношении которых имелись веские косвенные доказательства фактической аффилированности с должником
+Коллегия дала новую оценку фактическим обстоятельствам дела, признала необоснованным отказ в привлечении к субсидиарной ответственности лиц, в отношении которых имелись веские косвенные доказательства фактической аффилированности с должником
               </span>
                         </mj-accordion-text>
                     </mj-accordion-element>
