--- a/mjml-gulp/mjml-gulp-starter/src/ae.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/ae.mjml
@@ -14,7 +14,7 @@
             Если знания - то Lextorium!&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
         </mj-preview>
         <mj-title>
-            Субсидиарная ответственность: тренды судебной практики 2020
+             [Открытый вебинар] Субсидиарная ответственность
         </mj-title>
         <mj-style>
             @media (max-width: 480px) {
@@ -26,7 +26,7 @@
     </mj-head>
     <mj-body width="600px" background-color="#ffffff">
         <mj-include path="prototypes/header.mjml"/>
-        <mj-section width="600px" background-url="https://funkyimg.com/i/37c8D.jpg" background-repeat="no-repeat"
+        <mj-section width="600px" background-url="https://funkyimg.com/i/37fgL.jpg" background-repeat="no-repeat"
                     background-size="cover">
             <mj-column width="100%" padding="30px">
             </mj-column>
@@ -34,7 +34,7 @@
                 <mj-text align="left" color="#ffffff" line-height="46px"
                          font-family="Book antiqua, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif"
                          font-size="36px" font-weight="600" padding="40px 20px 40px 20px">
-                    Субсидиарная ответственность: тренды судебной практики 2020                </mj-text>
+                     [Открытый вебинар] Субсидиарная ответственность                </mj-text>
             </mj-column>
         </mj-section>
         <mj-section mj-class="container" padding-top="20px" padding-left="0">
@@ -44,17 +44,17 @@
                         <span style="text-transform: capitalize;">{{first_name|Коллега}}</span>, здравствуйте!
                     </p>
                     <p class="paragraph">
-                    Последние годы институт субсидиарной ответственности при банкротстве все чаще при-меняется на практике и становится действенным инструментом привлечения к ответственности лиц, нарушавших права кредиторов. С ростом количества споров растет и количество вопросов, возникающих при применении этого института. Какие-то из них связаны с недостатками законодательства, какие-то упираются в трудности правоприменительной практики. На них реагирует как законодатель, так и судебная практика (в т.ч. Судебная коллегия по экономическим спорам Верховного Суда РФ).
+Несмотря на коррективы, которая внесла в работу российской судебной системы пандемия COVID-19, судьи Верховного Суда РФ активно передавали в 2020 году на рассмотрение Судебной коллегии по экономическим спорам обособленные споры о привлечении контролирующих должника лиц к субсидиарной ответственности.
                 </mj-text>
             </mj-column>
         </mj-section>
-
+        <mj-spacer height="20px"></mj-spacer>
         <mj-section mj-class="container" font-family="Arial, sans-serif">
             <mj-column width="100%">
                 <mj-text font-family="Arial, sans-serif">
                     <p style="font-size: 18px; padding-bottom: 10px;"><b>Хотите знать больше?</b></p>
                     <p style="font-size: 16px;">
-                        Совсем скоро стартует <b>бесплатный</b> вебинар:
+                        Уже завтра стартует <b>бесплатный</b> вебинар:
                     </p>
                 </mj-text>
             </mj-column>
@@ -72,7 +72,7 @@
                         8 сентября
                     </p>
                     <p style="margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px;"><b>Формат
-                        участия: </b>онлайн + запись</p>
+                        участия: </b>онлайн</p>
                     <p style="margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px;"><b>Стоимость:
                     </b>бесплатно</p>
                 </mj-text>
@@ -152,6 +152,38 @@
                 </mj-accordion>
             </mj-column>
         </mj-section>
+
+                <mj-section>
+            <mj-column>
+                <mj-text>
+                <p class="paragraph">
+                    8 утра: почему так рано, спросите Вы? И мы ответим! Уже до начала рабочего дня Вы сможете получить ценные знания, которые тут же сможете применить на практике в своих судебных спорах. Вам не нужно будет делать перерыв в рабочем процессе либо тратить время на прослушивание записи вебинара вечером. Кроме того, не будем забывать про наших слушателей из Сибири и Дальнего Востока, ведь у них в это время будет уже день! 
+
+                </p>
+                </mj-text>
+            </mj-column>
+        </mj-section>
+
+                <mj-section>
+            <mj-column>
+                <mj-text>
+                <p class="paragraph">
+Субсидиарка для жаворонков: прокачай свои знания по субсидиарной ответственности уже с утра, будь в тренде судебной практики 2020!
+                </p>
+                </mj-text>
+            </mj-column>
+        </mj-section>
+        <mj-spacer height="20px"></mj-spacer>
+<mj-section>
+        <mj-column width="100%">
+            <mj-text align="center">
+                <a
+                        href="https://lextorium.com/courses/vebinary/subsidiarnaya-otvetstvennost-trendy-sudebnoy-praktiki-2020.html" class="button">Зарегистрироваться на вебинар</a>
+
+            </mj-text>
+        </mj-column>
+        </mj-section>
+
 
         <mj-section mj-class="container" padding-left="0">
             <mj-column width="100%">
